--- a/TS/package.json
+++ b/TS/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.5.5",
+    "prisma": "^5.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.0",
+    "@prisma/client": "^5.19.1",
     "fastify": "^5.0.0",
     "tsx": "^4.19.1"
   }
